--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carlos Clark">
     <title>Curriculum de Carlos Clark</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header id="header-index" name="header-index">
         <h1>Curriculum de Carlos Clark</h1>
-        <nav id="navegacion" name="navegacion">
-                <h3><a href="index.html">Inicio</a></h3>
-                <h3><a href="interests.html">Intereses</a></h3>
-                <h3><a href="schedule.html">Horario</a></h3>
-        </nav>
         <div>
-            <br><img src="profile.jpg" alt="Foto de Carlos Clark" width="200">
+            <br><img src="profile.jpg" alt="Foto de Carlos Clark" width="400">
         </div>
     </header>
+    <nav id="navegacion-index" name="navegacion-index">
+                <a href="index.html">Inicio</a>
+                <a href="interests.html">Intereses</a>
+                <a href="schedule.html">Horario</a>
+        </nav>
     <main>
         <section id="sobre-mi" name="sobre-mi">
             <h2>Sobre mí</h2>
@@ -58,7 +59,7 @@
             </p>
         </section>
         <section id="lenguages" name="languages">
-            <h2>Lenguajes</h2>
+            <h2 class="Titulo-Lenguajes">Lenguajes</h2>
             <p>Actualmente hablo Español en toda su fluidez y en el caso del Inglés<br>
                 tengo un nivel intermedio, lo cual me permite comunicarme de manera efectiva<br>
                 en situaciones cotidianas y laborales. Estoy comprometido en seguir mejorando<br>
@@ -69,7 +70,6 @@
     <footer id="contacto" name="contacto">
         <p>Github: <a href="https://github.com/Clarkson18">https://github.com/Clarkson18</p>
         <p>Contacto: <a href="mailto:carlos.clark247383@potros.itson.edu.mx">carlos.clark247383@potros.itson.edu.mx</p>
-        
     </footer>
 </body>
 </html>
