--- a/schedule.html
+++ b/schedule.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carlos Clark">
     <title id="Titulo-Horario" name="Titulo-Horario">Horario - Carlos Clark</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header id="navegacion" name="navegacion">
+    <header id="header-horario" name="header-horario">
         <h1>Horario</h1>
-        <nav>
-            <ul>
-                <h3><a href="index.html">Inicio</a></h3>
-                <h3><a href="interests.html">Intereses</a></h3>
-                <h3><a href="schedule.html">Horario</a></h3>
-            </ul>
-        </nav>
     </header>
     <main>
-        <section id="Horario" name="Horario">
-            <h2>Horario del Semestre</h2>
-            <img src="horario.jpg"></img><p></p>
+</body>
+    <nav id="navegacion-horario" name="navegacion-horario">
+                        <a href="index.html">Inicio</a>
+                        <a href="interests.html">Intereses</a>
+                        <a href="schedule.html">Horario</a>
+            </nav>
+        <section id="Horario" name="Horario" align="center">
+            <img src="horario.jpg"></img>
         </section>
     </main>
     <footer id="Contacto" name="Contacto">
