--- a/interests.html
+++ b/interests.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carlos Clark">
     <title>Intereses - Carlos Clark</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Intereses</h1>
     </header>
     <main>
+        <nav id="navegacion-intereses" name="navegacion-intereses">
+                    <a href="index.html">Inicio</a>
+                    <a href="interests.html">Intereses</a>
+                    <a href="schedule.html">Horario</a>
+        </nav>
         <section id="intereses-personales" name="intereses-personales">
             <h2>Intereses Personales</h2>
             <p>Me interesan muchas cosas, como por ejemplo: </p>
@@ -36,12 +42,5 @@
                 <li>Aprender nuevas tecnologías y herramientas</li>
         </section>
     </main>
-    <footer>
-        <nav id="navegacion" name="navegacion">
-                <h3><a href="index.html">Inicio</a></h3>
-                <h3><a href="interests.html">Intereses</a></h3>
-                <h3><a href="schedule.html">Horario</a></h3>
-        </nav>
-    </footer>
 </body>
 </html>
