--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="schedule.html">Horario</a>
         </nav>
     <main>
-        <section id="sobre-mi" name="sobre-mi">
+        <section id="sobre-mi" name="sobre-mi" class="box-model">
             <h2>Sobre mí</h2>
             <p>Programador web en curso en el prestigioso Instituto Tecnologico de Sonora<br>
                A lo largo de mi vida he tenido la oportunidad de trabajar en diversos proyectos <br>
