--- a/interests.html
+++ b/interests.html
@@ -34,7 +34,7 @@
         <section id="intereses-profesionales" name="intereses-profesionales">
             <h2>Intereses Profesionales</h2>
             <p>Escribe aquí tus intereses profesionales.</p>
-            <ul>
+            <ul id="lista-intereses-profesionales" name="lista-intereses-profesionales">
                 <li>Desarrollar aplicaciones web y móviles</li>
                 <li>Trabajar en proyectos de análisis de datos</li>
                 <li>Contribuir a proyectos de equipo</li>
